--- a/src/assets/bib/2012-LMK-No-Entailing-Laws-Enablement.bib
+++ b/src/assets/bib/2012-LMK-No-Entailing-Laws-Enablement.bib
@@ -1,15 +1,17 @@
 
 @InBook{	  2012-lmk-no-entailing-laws-enablement,
   author	= {G. Longo and Montévil, Maël and S. Kauffman},
-  booktitle	= {Genetic and Evolutionary Computation Conference},
+  pages		= {1379--1392},
+  publisher	= {ACM},
   title		= {No entailing laws, but enablement in the evolution of the
 		  biosphere},
   year		= {2012},
   address	= {New York, NY, USA},
   day		= {1},
+  edition	= {GECCO'12},
   month		= jul,
-  organization	= {GECCO'12},
-  publisher	= {ACM},
+  note		= {\url{https://montevil.org/publications/chapters/2012-LMK-No-Entailing-Laws-Enablement/}},
+  series	= {GECCO ’12},
   abstract	= {Biological evolution is a complex blend of ever changing
 		  structural stability, variability and emergence of new phe-
 		  notypes, niches, ecosystems. We wish to argue that the evo-
@@ -46,13 +48,15 @@
 		  physics, will be discussed, and lead to ”extended
 		  criticality” as a conceptual frame for a better
 		  understanding of the living state of matter.},
+  booktitle	= {Proceedings of the 14th annual conference companion on
+		  Genetic and evolutionary computation},
+  collection	= {GECCO ’12},
   doi		= {10.1145/2330784.2330946},
-  edition	= {GECCO'12},
   eprint	= {https://montevil.org/assets/pdf/2012-LMK-No-Entailing-Laws-Enablement.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2012-LMK-No-Entailing-Laws-Enablement/}},
   keywords	= {conservation properties, symmetries, biological
 		  causality},
   language	= {english},
   location	= {Philadelphia (PA, USA)},
+  organization	= {GECCO'12},
   page		= {1379–1392}
 }
