--- a/src/assets/bib/2012-LMP-Levels-Organization-Criticality.bib
+++ b/src/assets/bib/2012-LMP-Levels-Organization-Criticality.bib
@@ -2,13 +2,13 @@
 @Article{	  2012-lmp-levels-organization-criticality,
   author	= {G. Longo and Montévil, Maël and A. Pocheville},
   journal	= {Frontiers in Physiology},
-  title		= {From bottom-up approaches to levels of organization and
-		  extended critical transitions},
+  title		= {From Bottom-Up Approaches to Levels of Organization and
+		  Extended Critical Transitions},
   year		= {2012},
   day		= {17},
   issn		= {1664-042X},
   month		= jul,
-  note		= {\url{https://montevil.org/publications/articles/2012-LMP-Levels-Organization-Criticality/}},
+  note		= {invited paper},
   number	= {232},
   volume	= {3},
   abstract	= {Biological thinking is structured by the notion of level
