--- a/src/assets/bib/2014-BSQ-Tissues-Collagen-Time.bib
+++ b/src/assets/bib/2014-BSQ-Tissues-Collagen-Time.bib
@@ -9,7 +9,9 @@
 		  Matrix and Human Breast Cells in Real Time},
   year		= {2014},
   day		= {1},
+  issn		= {1932-6203},
   month		= apr,
+  note		= {\url{https://montevil.org/publications/articles/2014-BSQ-Tissues-Collagen-Time/}},
   number	= {4},
   pages		= {e93325},
   volume	= {9},
@@ -51,10 +53,9 @@
   doi		= {10.1371/journal.pone.0093325},
   editor	= {Christophe Egles},
   eprint	= {https://montevil.org/assets/pdf/2014-BSQ-Tissues-Collagen-Time.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2014-BSQ-Tissues-Collagen-Time/}},
   keywords	= {Collagens, Morphogenesis, Extracellular matrix, Gels,
 		  Anisotropy, Stiffness, Scanning electron microscopy,
 		  Mammary gland development},
   language	= {english},
-  publisher	= {Public Library of Science}
+  publisher	= {Public Library of Science (PLoS)}
 }
