--- a/src/assets/bib/2014-LM-Perspectives-Organisms.bib
+++ b/src/assets/bib/2014-LM-Perspectives-Organisms.bib
@@ -1,15 +1,18 @@
 
 @Book{		  2014-lm-perspectives-organisms,
   author	= {Longo, G. and Montévil, Maël},
-  publisher	= {Springer},
-  title		= {Perspectives on Organisms: Biological time, symmetries and
-		  singularities},
+  editor	= {Maël Montévil},
+  publisher	= {Springer Berlin / Heidelberg},
+  title		= {Perspectives on Organisms: Biological time, Symmetries and
+		  Singularities},
   year		= {2014},
-  address	= {Heidelberg},
+  address	= {Berlin, Heidelberg},
   day		= {8},
-  isbn		= {978-3-642-35937-8},
+  edition	= {1st ed.},
+  isbn		= {9783642359385},
   month		= jan,
-  series	= {Lecture Notes in Morphogenesis},
+  note		= {\url{https://montevil.org/publications/books/2014-LM-Perspectives-Organisms/}},
+  series	= {Lecture Notes in Morphogenesis Ser.},
   abstract	= {This authored monograph introduces a genuinely theoretical
 		  approach to biology. Starting point is the investigation of
 		  empirical biological scaling including their variability,
@@ -37,6 +40,10 @@
 		  book may also be beneficial for graduate students who want
 		  to enter this field.},
   doi		= {10.1007/978-3-642-35938-5},
-  note		= {\url{https://montevil.org/publications/books/2014-LM-Perspectives-Organisms/}},
-  language	= {english}
+  issn		= {2195-1942},
+  journal	= {Lecture Notes in Morphogenesis},
+  language	= {english},
+  pagetotal	= {1293},
+  ppn_gvk	= {1746210818},
+  subtitle	= {Biological Time, Symmetries and Singularities}
 }
