--- a/src/assets/bib/2014-LM-ScalingScaleSymmetries.bib
+++ b/src/assets/bib/2014-LM-ScalingScaleSymmetries.bib
@@ -1,18 +1,19 @@
 
 @InBook{	  2014-lm-scalingscalesymmetries,
   author	= {Longo, G. and Montévil, Maël},
-  booktitle	= {Perspectives on Organisms},
+  pages		= {23--73},
   publisher	= {Springer Berlin Heidelberg},
   title		= {Scaling and Scale Symmetries in Biological Systems},
   year		= {2014},
   day		= {8},
-  isbn		= {978-3-642-35937-8},
+  isbn		= {9783642359385},
   month		= jan,
-  pages		= {23--73},
+  note		= {\url{https://montevil.org/publications/chapters/2014-LM-ScalingScaleSymmetries/}},
   series	= {Lecture Notes in Morphogenesis},
+  booktitle	= {Perspectives on Organisms},
   doi		= {10.1007/978-3-642-35938-5_2},
   eprint	= {https://montevil.org/assets/pdf/2014-LM-ScalingScaleSymmetries.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2014-LM-ScalingScaleSymmetries/}},
+  issn		= {2195-1942},
   keywords	= {Scaling; variability; allometry; fractals; regulation;
 		  criticality},
   language	= {english}
