--- a/src/assets/bib/2014-LMP-Incompressible-Complexite.bib
+++ b/src/assets/bib/2014-LMP-Incompressible-Complexite.bib
@@ -1,14 +1,15 @@
 
 @InBook{	  2014-lmp-incompressible-complexite,
   author	= {Longo, G. and Montévil, Maël and Pocheville, A.},
-  booktitle	= {Autour de la simplexité},
-  title		= {L'incompressible complexité du réel et la construction
+  editor	= {Berthoz, A. and Petit, J.-L.},
+  publisher	= {Collège de France},
+  title		= {L’incompressible complexité du réel et la construction
 		  évolutive du simple},
   year		= {2014},
   day		= {20},
-  editor	= {Berthoz, A. and Petit, J.-L.},
+  isbn		= {9782722603301},
   month		= mar,
-  publisher	= {Odile Jacob},
+  note		= {\url{https://montevil.org/publications/chapters/2014-LMP-Incompressible-Complexite/}},
   abstract	= {En parcourant un fil conducteur de l'évolution
 		  darwinienne, on trouve çà et là la formation du simple,
 		  comme résultat de la complexité des trajectoires
@@ -44,9 +45,8 @@
 		  étendue, une transition conceptuelle possible de la
 		  théorisation physique à celle de l'état vivant de la
 		  matière.},
+  booktitle	= {Complexité-Simplexité},
   doi		= {10.4000/books.cdf.3363},
   eprint	= {https://montevil.org/assets/pdf/2014-LMP-Incompressible-Complexite.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2014-LMP-Incompressible-Complexite/}},
-  isbn		= {9782722603301},
   language	= {french}
 }
