--- a/src/assets/bib/2014-PM-Ecological-Models-Cells.bib
+++ b/src/assets/bib/2014-PM-Ecological-Models-Cells.bib
@@ -6,8 +6,9 @@
 		  Intraorganismal Ecology},
   year		= {2014},
   day		= {27},
-  issn		= {1555-5542},
-  month		= {nov},
+  issn		= {1555-5550},
+  month		= nov,
+  note		= {\url{https://montevil.org/publications/articles/2014-PM-Ecological-Models-Cells/}},
   number	= {4},
   pages		= {401--413},
   volume	= {9},
@@ -27,9 +28,8 @@
 		  we apply these ideas to a situation of gene therapy.},
   doi		= {10.1007/s13752-014-0190-y},
   eprint	= {https://montevil.org/assets/pdf/2014-PM-Ecological-Models-Cells.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2014-PM-Ecological-Models-Cells/}},
   keywords	= {Ecosystem engineering, Inertial dynamics, Intraorganismal
 		  ecology, Niche construction, Nongenetic inheritance},
   language	= {english},
-  publisher	= {Springer Netherlands}
+  publisher	= {Springer Science and Business Media LLC}
 }
