--- a/src/assets/bib/2015-LMS-Search-Principles-Organisms.bib
+++ b/src/assets/bib/2015-LMS-Search-Principles-Organisms.bib
@@ -1,14 +1,14 @@
 
 @Article{	  2015-lms-search-principles-organisms,
-  author	= {Longo, Giuseppe and Montevil, Mael and Sonnenschein,
-		  Carlos and Soto, Ana M.},
-  journal	= {Journal of biosciences},
+  author	= {Longo, Giuseppe and Montévil, Maël and Sonnenschein,
+		  Carlos and Soto, Ana M},
+  journal	= {Journal of Biosciences},
   title		= {In search of principles for a Theory of Organisms},
   year		= {2015},
   day		= {1},
   issn		= {0973-7138},
-  month		= {Dec},
-  note		= {\url{https://montevil.org/publications/articles/2015-LMS-Search-Principles-Organisms/}},
+  month		= dec,
+  note		= {26648040[pmid]},
   number	= {5},
   pages		= {955--968},
   volume	= {40},
