--- a/src/assets/bib/2015-MM-Organisation-Closure-Constraints.bib
+++ b/src/assets/bib/2015-MM-Organisation-Closure-Constraints.bib
@@ -6,7 +6,8 @@
   year		= {2015},
   day		= {7},
   issn		= {0022-5193},
-  month		= {may},
+  month		= may,
+  note		= {\url{https://montevil.org/publications/articles/2015-MM-Organisation-Closure-Constraints/}},
   pages		= {179--191},
   volume	= {372},
   abstract	= {We propose a conceptual and formal characterisation of
@@ -28,7 +29,6 @@
 		  from this framework.},
   doi		= {10.1016/j.jtbi.2015.02.029},
   eprint	= {https://montevil.org/assets/pdf/2015-MM-Organisation-Closure-Constraints.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2015-MM-Organisation-Closure-Constraints/}},
   keywords	= {Biological organisation, Closure, Constraints, Symmetries,
 		  Time scales},
   language	= {english},
