--- a/src/assets/bib/2016-MMP-Theoretical-Principles-Variation.bib
+++ b/src/assets/bib/2016-MMP-Theoretical-Principles-Variation.bib
@@ -7,7 +7,8 @@
   year		= {2016},
   day		= {13},
   issn		= {0079-6107},
-  month		= {aug},
+  month		= oct,
+  note		= {\url{https://montevil.org/publications/articles/2016-MMP-Theoretical-Principles-Variation/}},
   number	= {1},
   pages		= {36--50},
   volume	= {122},
@@ -34,7 +35,6 @@
 		  default state and the principle of organization.},
   doi		= {10.1016/j.pbiomolbio.2016.08.005},
   eprint	= {https://montevil.org/assets/pdf/2016-MMP-Theoretical-Principles-Variation.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2016-MMP-Theoretical-Principles-Variation/}},
   keywords	= {Variability, Historicity, Genericity, Biological
 		  randomness, Organization, Theory of organisms},
   language	= {english},
