--- a/src/assets/bib/2016-PMS-Sama-Method-Morphometry.bib
+++ b/src/assets/bib/2016-PMS-Sama-Method-Morphometry.bib
@@ -3,13 +3,15 @@
   author	= {Paulose, Tessie and Montévil, Maël and Speroni, Lucia
 		  and Cerruti, Florent and Sonnenschein, Carlos and Soto, Ana
 		  M.},
-  journal	= {PLoS ONE},
+  journal	= {PLOS ONE},
   title		= {SAMA: A Method for 3D Morphological Analysis},
   year		= {2016},
   day		= {1},
+  issn		= {1932-6203},
   month		= apr,
+  note		= {\url{https://montevil.org/publications/articles/2016-PMS-Sama-Method-Morphometry/}},
   number	= {4},
-  pages		= {1--14},
+  pages		= {e0153022},
   volume	= {11},
   abstract	= {Three-dimensional (3D) culture models are critical tools
 		  for understanding tissue morphogenesis. A key requirement
@@ -35,10 +37,9 @@
   doi		= {10.1371/journal.pone.0153022},
   editor	= {Tiffany Seagroves},
   eprint	= {https://montevil.org/assets/pdf/2016-PMS-Sama-Method-Morphometry.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2016-PMS-Sama-Method-Morphometry/}},
   keywords	= {Open source software, Image analysis, Ellipsoids,
 		  Morphogenesis, Computer software, Morphometry, Image
 		  processing, Branching morphogenesis},
   language	= {english},
-  publisher	= {Public Library of Science}
+  publisher	= {Public Library of Science (PLoS)}
 }
