--- a/src/assets/bib/2016-Theory-Morphogenesis.bib
+++ b/src/assets/bib/2016-Theory-Morphogenesis.bib
@@ -1,12 +1,14 @@
 
 @Article{	  2016-theory-morphogenesis,
-  author	= {M. Montevil and Carlos Sonnenschein and Ana M. Soto},
+  author	= {Montévil, Maël and Sonnenschein, Carlos and Soto, Ana
+		  M},
   journal	= {Journal of Theoretical and Applied Vascular Research},
   title		= {Theoretical approach of ductal morphogenesis},
   year		= {2016},
   day		= {31},
   issn		= {2532-0831},
   month		= dec,
+  note		= {\url{https://montevil.org/publications/articles/2016-Theory-Morphogenesis/}},
   number	= {1},
   pages		= {45--49},
   volume	= {1},
@@ -29,7 +31,6 @@
 		  genes in particular.},
   doi		= {10.24019/jtavr.7},
   eprint	= {https://montevil.org/assets/pdf/2016-Theory-Morphogenesis.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2016-Theory-Morphogenesis/}},
   keywords	= {Morphogenesis, extracellular matrix, theoretical
 		  principles, default state of cells, modelization.},
   language	= {english},
