--- a/src/assets/bib/2017-GM-Repetition-Reversibility-Evolution.bib
+++ b/src/assets/bib/2017-GM-Repetition-Reversibility-Evolution.bib
@@ -9,8 +9,10 @@
   year		= {2017},
   address	= {Cham},
   day		= {31},
-  isbn		= {978-3-319-53725-2},
+  isbn		= {9783319537252},
   month		= may,
+  note		= {\url{https://montevil.org/publications/chapters/2017-GM-Repetition-Reversibility-Evolution/}},
+  series	= {Springer eBook Collection},
   abstract	= {Repetitiveness and reversibility have long been considered
 		  as characteristic features of scientific knowledge. In
 		  theoretical population genetics, repetitiveness is
@@ -35,8 +37,11 @@
 		  Perspectives of Time in Natural Sciences},
   doi		= {10.1007/978-3-319-53725-2_13},
   eprint	= {https://montevil.org/assets/pdf/2017-GM-Repetition-Reversibility-Evolution.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2017-GM-Repetition-Reversibility-Evolution/}},
+  issn		= {2214-7942},
   keywords	= {population genetics, repetition, retrodiction,
 		  reversibility},
-  language	= {english}
+  language	= {english},
+  pagetotal	= {4038229},
+  ppn_gvk	= {1659113288},
+  subtitle	= {Philosophical Perspectives of Time in Natural Sciences}
 }
