--- a/src/assets/bib/2017-LM-Big-Data-Connaissance.bib
+++ b/src/assets/bib/2017-LM-Big-Data-Connaissance.bib
@@ -4,13 +4,14 @@
   editor	= {T. Gaudin and D. Lacroix and M.-C. Maurel and J.-C.
 		  Pomerol},
   pages		= {233--238},
-  publisher	= {ISTE-Editions.},
+  publisher	= {ISTE Editions Ltd.},
   title		= {Big Data et connaissance biologique},
   year		= {2017},
-  address	= {Paris},
+  address	= {London},
   day		= {1},
-  isbn		= {978-1-78405-287-4},
+  isbn		= {9781784062873},
   month		= sep,
+  note		= {\url{https://montevil.org/publications/chapters/2017-LM-Big-Data-Connaissance/}},
   abstract	= {Certains auteurs affirment que l'analyse des grandes bases
 		  de données pourrait remplacer la méthode scientifique. A
 		  contrario, nous argumentons que la bonne manière de faire
@@ -19,8 +20,9 @@
 		  urgent de développer une théorie des organismes.},
   booktitle	= {Sciences de la vie, sciences de l'information},
   eprint	= {https://montevil.org/assets/pdf/2017-LM-Big-Data-Connaissance.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2017-LM-Big-Data-Connaissance/}},
   language	= {french},
+  pagetotal	= {1382},
+  ppn_gvk	= {1752153995},
   pubstate	= {2017},
   url		= {https://www.istegroup.com/fr/produit/sciences-de-la-vie-sciences-de-linformation/}
 }
