--- a/src/assets/bib/2017-MLS-Siecle-Organisme.bib
+++ b/src/assets/bib/2017-MLS-Siecle-Organisme.bib
@@ -1,18 +1,16 @@
 
 @InBook{	  2017-mls-siecle-organisme,
-  eprint	= {https://montevil.org/assets/pdf/2017-MLS-Siecle-Organisme.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2017-MLS-Siecle-Organisme/}},
   author	= {Montévil, Maël and G. Longo and Ana M. Soto},
   editor	= {T. Gaudin and D. Lacroix and M.-C. Maurel and J.-C.
 		  Pomerol},
   pages		= {76--90},
-  publisher	= {ISTE-Editions.},
+  publisher	= {ISTE Editions Ltd.},
   title		= {Du siècle du gène à celui de l'organisme :
 		  introduction à de nouvelles perspectives théoriques},
-  language	= {french},
   year		= {2017},
-  address	= {Paris},
-  isbn		= {978-1-78405-287-4},
+  address	= {London},
+  isbn		= {9781784062873},
+  note		= {\url{https://montevil.org/publications/chapters/2017-MLS-Siecle-Organisme/}},
   abstract	= {Les organismes, qu'ils soient uni ou multi-cellulaires,
 		  sont des agents capables de créer leurs propres normes ;
 		  ils articulent continuellement leur capacité à créer de
@@ -28,6 +26,10 @@
 		  radical ouvre la possibilité d'ancrer la modélisation
 		  mathématique à des principes proprement biologiques.},
   booktitle	= {Sciences de la vie, sciences de l'information},
+  eprint	= {https://montevil.org/assets/pdf/2017-MLS-Siecle-Organisme.pdf},
+  language	= {french},
+  pagetotal	= {1382},
+  ppn_gvk	= {1752153995},
   pubstate	= {2017},
   url		= {https://www.istegroup.com/fr/produit/sciences-de-la-vie-sciences-de-linformation/}
 }
