--- a/src/assets/bib/2017-MM-Une-Breve-Discussion.bib
+++ b/src/assets/bib/2017-MM-Une-Breve-Discussion.bib
@@ -1,19 +1,20 @@
 
 @InBook{	  2017-mm-une-breve-discussion,
-  eprint	= {https://montevil.org/assets/pdf/2017-MM-Une-Breve-Discussion.pdf},
   author	= {Maël Montévil and Mossio, Matteo},
   editor	= {M. Silberstein},
   publisher	= {Editions Matériologiques},
   title		= {Une brève discussion sur la science autour d'un verre},
-  language	= {french},
   year		= {2017},
+  isbn		= {978-2-37361-107-6},
+  note		= {\url{https://montevil.org/publications/chapters/2017-MM-Une-Breve-Discussion/}},
   abstract	= {Deux collègues chercheurs terminent une longue réunion
 		  de travail. Ils décident de boire un verre ensemble dans
 		  un café voisin. Le bon vin y étant sans doute pour
 		  quelque chose, ils se retrouvent à confronter leurs points
 		  de vue sur un sujet ô combien difficile...},
   booktitle	= {Qu'est ce que la science pour vous?},
-  note		= {\url{https://montevil.org/publications/chapters/2017-MM-Une-Breve-Discussion/}},
+  eprint	= {https://montevil.org/assets/pdf/2017-MM-Une-Breve-Discussion.pdf},
+  language	= {french},
   page		= {179},
   url		= {https://materiologiques.com/fr/sciences-philosophie/244-qu-est-ce-que-la-science-pour-vous--9782373611076.html}
 }
