--- a/src/assets/bib/2017-MP-Hitchhikers-Guide-Cancer.bib
+++ b/src/assets/bib/2017-MP-Hitchhikers-Guide-Cancer.bib
@@ -8,6 +8,7 @@
   day		= {15},
   issn		= {2532-5876},
   month		= dec,
+  note		= {\url{https://montevil.org/publications/articles/2017-MP-Hitchhikers-Guide-Cancer/}},
   number	= {2},
   pages		= {37--48},
   volume	= {1},
@@ -29,10 +30,9 @@
   copyright	= {Copyright (c) 2017 Maël Montévil, Arnaud Pocheville},
   doi		= {10.13133/2532-5876_2.9},
   eprint	= {https://montevil.org/assets/pdf/2017-MP-Hitchhikers-Guide-Cancer.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2017-MP-Hitchhikers-Guide-Cancer/}},
   keywords	= {TOFT, reductionism, organicism, levels of organization,
 		  SMT},
-  language	= {english},
+  language	= {en},
   publisher	= {Sapienza Università Editrice},
   shorttitle	= {The {Hitchhiker}'s {Guide} to the {Cancer} {Galaxy}}
 }
