--- a/src/assets/bib/2017-Montevil-Garson-Functions.bib
+++ b/src/assets/bib/2017-Montevil-Garson-Functions.bib
@@ -2,13 +2,17 @@
 @Article{	  2017-montevil-garson-functions,
   author	= {Montévil, Maël},
   journal	= {Science {\&} Education},
-  title		= {Philosophical Accounts of Biological Functions},
+  title		= {Philosophical Accounts of Biological Functions: Justin
+		  Garson (2016) A Critical Overview of Biological Functions.
+		  Springer International Publishing, Dordrecht. ISBN:
+		  978-3-319-32020-5, 113 pages, price: $54.99 (paperback)},
   year		= {2017},
   day		= {26},
   issn		= {1573-1901},
   month		= aug,
-  note		= {\url{https://montevil.org/publications/varia/2017-Montevil-Garson-Functions/}},
-  number	= {7-9},
+  note		= {Book review of A Critical Overview of Biological
+		  Functions, Justin Garson (2016).},
+  number	= {7–9},
   pages		= {1071--1073},
   volume	= {26},
   doi		= {10.1007/s11191-017-9917-z},
