--- a/src/assets/bib/2018-GM-Repetition-Reversibilite.bib
+++ b/src/assets/bib/2018-GM-Repetition-Reversibilite.bib
@@ -8,7 +8,9 @@
 		  génétique des populations théorique},
   year		= {2018},
   day		= {18},
+  isbn		= {9782271090836},
   month		= oct,
+  note		= {\url{https://montevil.org/publications/chapters/2018-GM-Repetition-Reversibilite/}},
   abstract	= {La répétitivité et la réversibilité ont longtemps
 		  été considérées comme des traits caractéristiques de
 		  la connaissance scientifique. Dans la génétique des
@@ -34,7 +36,6 @@
   booktitle	= {Temps de la nature \& nature du temps. Études
 		  philosophiques sur le temps dans les sciences naturelles},
   eprint	= {https://montevil.org/assets/pdf/2018-GM-Repetition-Reversibilite.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2018-GM-Repetition-Reversibilite/}},
   keywords	= {génétique des populations, répétition, rétrodiction,
 		  réversibilité},
   language	= {french},
