--- a/src/assets/bib/2018-Montevil-Primer-Mathematical-Modeling.bib
+++ b/src/assets/bib/2018-Montevil-Primer-Mathematical-Modeling.bib
@@ -3,14 +3,15 @@
   author	= {Montévil, Maël},
   editor	= {Bizzarri, Mariano},
   pages		= {41--55},
-  publisher	= {Springer},
+  publisher	= {Springer New York},
   title		= {A Primer on Mathematical Modeling in the Study of
 		  Organisms and Their Parts},
   year		= {2018},
   address	= {New York, NY},
   day		= {9},
-  isbn		= {978-1-4939-7456-6},
-  month		= {nov},
+  isbn		= {9781493974566},
+  month		= nov,
+  note		= {\url{https://montevil.org/publications/chapters/2018-Montevil-Primer-Mathematical-Modeling/}},
   series	= {Methods in Molecular Biology},
   abstract	= {Mathematical modeling is a very powerful tool for
 		  understanding natural phenomena. Such a tool carries its
@@ -27,8 +28,10 @@
   booktitle	= {Systems Biology},
   doi		= {10.1007/978-1-4939-7456-6_4},
   eprint	= {https://montevil.org/assets/pdf/2018-Montevil-Primer-Mathematical-Modeling.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2018-Montevil-Primer-Mathematical-Modeling/}},
+  issn		= {1940-6029},
   keywords	= {Equations, Mathematical modeling, Parameters,
 		  Proliferation, Theory},
-  language	= {english}
+  language	= {english},
+  pagetotal	= {36410283},
+  ppn_gvk	= {1657203255}
 }
