--- a/src/assets/bib/2020-MAS-Morphometric-Clarity-Bpa.bib
+++ b/src/assets/bib/2020-MAS-Morphometric-Clarity-Bpa.bib
@@ -4,12 +4,14 @@
 		  Schaeberle and Manushree Bharadwaj and Suzanne E. Fenton
 		  and Ana M. Soto},
   journal	= {Environmental Health Perspectives},
-  title		= {A combined morphometric and statistical approach to assess
-		  non-monotonicity in the developing mammary gland of rats in
-		  the CLARITY-BPA study},
+  title		= {A Combined Morphometric and Statistical Approach to Assess
+		  Nonmonotonicity in the Developing Mammary Gland of Rats in
+		  the CLARITY-BPA Study},
   year		= {2020},
   day		= {20},
+  issn		= {1552-9924},
   month		= may,
+  note		= {\url{https://montevil.org/publications/articles/2020-MAS-Morphometric-Clarity-Bpa/}},
   number	= {5},
   pages		= {057001},
   volume	= {128},
@@ -27,9 +29,8 @@
 		  with the core study, which revealed a significant increase
 		  of mammary adenocarcinoma incidence in the stop-dose
 		  animals at the lowest BPA dose tested.},
-  doi		= {10.1289/EHP6301},
+  doi		= {10.1289/ehp6301},
   eprint	= {https://montevil.org/assets/pdf/2020-MAS-Morphometric-Clarity-Bpa.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2020-MAS-Morphometric-Clarity-Bpa/}},
   language	= {english},
   publisher	= {Environmental Health Perspectives}
 }
