--- a/src/assets/bib/2021-ACM-Informatique-theorique-Stiegler.bib
+++ b/src/assets/bib/2021-ACM-Informatique-theorique-Stiegler.bib
@@ -1,9 +1,12 @@
 
 @Book{		  2021-acm-informatique-theorique-stiegler,
+  author	= {Anne Alombert and Victor Chaix and Maël Montévil and
+		  Vincent Puig},
   publisher	= {Fip},
-  language	= {FR},
+  title		= {Prendre Soin de l’informatique et Des Générations},
   year		= {2021},
   day		= {19},
+  isbn		= {978-2-36405-212-3},
   month		= nov,
   abstract	= {Lorsque les technologies numériques sont mises au service
 		  de l’économie des données, leur design et leur
@@ -33,8 +36,6 @@
 		  pratiques, afin de mettre les technologies numériques au
 		  service de la production et de la transmission de savoirs,
 		  ainsi que des liens entre les générations.},
-  author	= {Anne Alombert and Victor Chaix and Maël Montévil and
-		  Vincent Puig},
-  title		= {Prendre Soin de l’informatique et Des Générations},
+  language	= {FR},
   url		= {https://www.fypeditions.com/prendre-soin-de-linformatique-et-des-generations-hommage-a-bernard-stiegler/}
 }
