--- a/src/assets/bib/2021-Internation-Bifurcate.bib
+++ b/src/assets/bib/2021-Internation-Bifurcate.bib
@@ -2,9 +2,15 @@
 @Book{		  2021-internation-bifurcate,
   author	= {Bernard Stiegler and {Internation Collective} and Daniel
 		  Ross},
+  editor	= {null null},
+  publisher	= {Open Humanities Press},
+  title		= {Bifurcate},
   year		= {2021},
-  month		= dec,
+  address	= {London},
   day		= {31},
+  isbn		= {9781785421228},
+  month		= dec,
+  series	= {CCC2 Irreversibility},
   abstract	= {Bifurcating means: reconstituting a political economy that
 		  reconnects local knowledge and practices with macroeconomic
 		  circulation and rethinks territoriality at its different
@@ -31,8 +37,10 @@
 		  a mechanism that ignores the constraints of locality in
 		  biology and the entropic tendency in reticulated
 		  computational information. In these gravely perilous times,
-		  we must bifurcate: there is no alternative. },
-  title		= {Bifurcate: There Is No Alternative},
+		  we must bifurcate: there is no alternative.},
   language	= {english},
+  pagetotal	= {1330},
+  ppn_gvk	= {1836508387},
+  subtitle	= {There Is No Alternative},
   url		= {http://www.openhumanitiespress.org/books/titles/bifurcate/}
 }
