--- a/src/assets/bib/2021-Montevil-Entropies-Anthropocene.bib
+++ b/src/assets/bib/2021-Montevil-Entropies-Anthropocene.bib
@@ -1,21 +1,23 @@
 
 @Article{	  2021-montevil-entropies-anthropocene,
-  eprint	= {https://montevil.org/assets/pdf/2021-Montevil-Entropies-Anthropocene.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2021-Montevil-Entropies-Anthropocene/}},
   author	= {Montévil, Maël},
-  journal	= {{AI} and society},
   title		= {Entropies and the Anthropocene crisis},
-  language	= {english},
-  year		= {2021},
-  abstract	= { The Anthropocene crisis is frequently described as the
+  journal	= {AI {\&} SOCIETY},
+  year		= {2023},
+  month		= {Dec},
+  day		= {01},
+  volume	= {38},
+  number	= {6},
+  pages		= {2451-2471},
+  abstract	= {The Anthropocene crisis is frequently described as the
 		  rarefaction of resources or resources per capita. However,
 		  both energy and minerals correspond to fundamentally
 		  conserved quantities from the perspective of physics. A
 		  specific concept is required to understand the rarefaction
 		  of available resources. This concept, entropy, pertains to
 		  energy and matter configurations and not just to their
-		  sheer amount. <br> However, the physics concept of entropy
-		  is insufficient to understand biological and social
+		  sheer amount. However, the physics concept of entropy is
+		  insufficient to understand biological and social
 		  organizations. Biological phenomena display both
 		  historicity and systemic properties. A biological
 		  organization, the ability of a specific living being to
@@ -27,10 +29,9 @@
 		  is, decreasing anti-entropy. Moreover, second-order
 		  disruptions correspond to the decline of the ability to
 		  produce functional novelties, that is, to produce
-		  anti-entropy. },
+		  anti-entropy.},
+  issn		= {1435-5655},
+  doi		= {10.1007/s00146-021-01221-0},
   keywords	= {entropy, anti-entropy, resources, organization,
-		  disruption, Anthropocene},
-  month		= {5},
-  day		= {15},
-  doi		= {10.1007/s00146-021-01221-0}
+		  disruption, Anthropocene}
 }
