--- a/src/assets/bib/2021-Montevil-Stiegler-Sciences-Entropocene.bib
+++ b/src/assets/bib/2021-Montevil-Stiegler-Sciences-Entropocene.bib
@@ -1,15 +1,17 @@
 
 @Article{	  2021-montevil-stiegler-sciences-entropocene,
   author	= {Montévil, Maël},
-  journal	= {EcoRev'},
-  title		= {Sciences et entropocène. Autour de Qu'appelle-t-on panser
-		  ? de Bernard Stiegler},
+  journal	= {EcoRev’},
+  title		= {Sciences et entropocène: Autour de Qu’appelle-t-on
+		  panser ? de Bernard Stiegler},
   year		= {2021},
-  month		= {mar},
+  day		= {17},
+  issn		= {1628-6391},
+  month		= mar,
+  note		= {\url{https://montevil.org/publications/articles/2021-Montevil-Stiegler-Sciences-Entropocene/}},
   number	= {1},
   pages		= {109--125},
-  volume	= {50},
-  day		= {17},
+  volume	= {N° 50},
   abstract	= {En examinant le second tome de Qu’appelle-t-on panser
 		  (1), le théoricien de la biologie et épistémologue Maël
 		  Montévil, qui a collaboré avec Bernard Stiegler à la
@@ -31,7 +33,6 @@
 		  savoirs territoriaux.},
   doi		= {10.3917/ecorev.050.0109},
   eprint	= {https://montevil.org/assets/pdf/2021-Montevil-Stiegler-Sciences-Entropocene.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2021-Montevil-Stiegler-Sciences-Entropocene/}},
   language	= {FR},
-  publisher	= {Association EcoRev'}
+  publisher	= {CAIRN}
 }
