--- a/src/assets/bib/2021-Montevil-Theory-Accuracy-Medicine.bib
+++ b/src/assets/bib/2021-Montevil-Theory-Accuracy-Medicine.bib
@@ -1,9 +1,21 @@
 
 @InBook{	  2021-montevil-theory-accuracy-medicine,
   author	= {Ma{\"e}l Mont{\'e}vil},
-  title		= "Conceptual and Theoretical Specifications for Accuracy in
-		  Medicine",
-  language	= {english},
+  editor	= {Marta Bertolaso},
+  pages		= {47--62},
+  publisher	= {Springer International Publishing AG},
+  title		= {Conceptual and Theoretical Specifications for Accuracy in
+		  Medicine},
+  year		= {2022},
+  address	= {Cham},
+  day		= {8},
+  isbn		= {9783030748043},
+  month		= {mar},
+  note		= {Description based on publisher supplied metadata and other
+		  sources.},
+  number	= {v.3},
+  series	= {Human Perspectives in Health Sciences and Technology
+		  Series},
   abstract	= {Technological developments in genomics and other -omics
 		  originated the idea that precise measurements would lead to
 		  better therapeutic strategies. However, precision does not
@@ -29,18 +41,14 @@
 		  in line with the philosophy of Georges Canguilhem. We argue
 		  that taking this dimension of medicine into account is
 		  critical for theoretical accuracy.},
-  editor	= {Chiara Beneduce and Marta Bertolaso},
   booktitle	= {Personalized Medicine in the Making: Philosophical
 		  Perspectives from Biology to Healthcare},
+  doi		= {10.1007/978-3-030-74804-3_3},
   keywords	= {Normativity, Organization, Personalized Medicine,
 		  Technology, theoretical biology},
-  publisher	= "Springer International Publishing",
-  series	= {Human Perspectives in Health Sciences and Technology},
-  isbn		= "978-3-030-74804-3",
-  doi		= "10.1007/978-3-030-74804-3_3",
-  url		= "https://doi.org/10.1007/978-3-030-74804-3_3",
-  year		= {2022},
-  day		= {8},
-  month		= {mar},
-  pages		= "47--62"
+  language	= {english},
+  pagetotal	= {1334},
+  ppn_gvk	= {1842910906},
+  subtitle	= {Philosophical Perspectives from Biology to Healthcare},
+  url		= {https://doi.org/10.1007/978-3-030-74804-3_3}
 }
