--- a/src/assets/bib/2022-Montevil-uncomputable-living-computers.bib
+++ b/src/assets/bib/2022-Montevil-uncomputable-living-computers.bib
@@ -1,15 +1,17 @@
 
 @Article{	  2022-montevil-uncomputable-living-computers,
   author	= {M. Montevil},
-  journal	= {Trópoς. Rivista di ermeneutica e critica filosofica },
+  journal	= {Trópos},
   title		= {Understanding living beings by analogy with computers or
 		  understanding computers as an emanation of the living},
-  year		= {2022},
+  year		= {2021},
   day		= {5},
-  number	= {2},
-  volume	= {13},
   month		= aug,
-  page		= {59-75},
+  note		= {The Future as a Problem. Between Philosophy and Cultural
+		  Studies},
+  number	= {2},
+  pages		= {etica},
+  volume	= {V. 13 N. 2},
   abstract	= { The analogy between living beings and computers was
 		  introduced with circumspection by Schrödinger and has been
 		  widely propagated since, rarely with a precise technical
@@ -28,9 +30,11 @@
 		  is only a part of the theoretical determination of what
 		  actually happens in a computer when considering them in
 		  their larger theoretical context where historicity is also
-		  central. },
-  note		= {The Future as a Problem. Between Philosophy and Cultural
-		  Studies},
-  url		= {https://www.aracneeditrice.eu/it/pubblicazioni/tropos-ada-tenuti-ada-tenuti-gaetano-chiurazzi-emilio-carlo-corriero-giuseppe-longo-mael-montevil-teresa-numerico-francesca-perotto-davide-pilotto-9791221801194.html},
-  doi		= {10.53136/97912218011945}
+		  central.},
+  doi		= {10.13135/2036-542X/8104},
+  issue		= {2020},
+  language	= {en},
+  page		= {59-75},
+  publisher	= {Trópos},
+  url		= {https://www.aracneeditrice.eu/it/pubblicazioni/tropos-ada-tenuti-ada-tenuti-gaetano-chiurazzi-emilio-carlo-corriero-giuseppe-longo-mael-montevil-teresa-numerico-francesca-perotto-davide-pilotto-9791221801194.html}
 }
