--- a/src/assets/bib/2022-Postface-Giorgini.bib
+++ b/src/assets/bib/2022-Postface-Giorgini.bib
@@ -1,13 +1,17 @@
 
 @InBook{	  2022-postface-giorgini,
   author	= {Ma{\"e}l Mont{\'e}vil},
-  publisher	= {ISTE Editions},
+  editor	= {Pierre Giorgini},
+  publisher	= {ISTE Editions Ltd.},
   title		= {Postface de La révolution contributive, 2022, Pierre
 		  Giorgini},
-  language	= {fr},
-  year		= {2022},
+  year		= {2021},
+  address	= {London},
   day		= {01},
+  isbn		= {9781784068134},
   month		= jan,
+  note		= {Description based on publisher supplied metadata and other
+		  sources.},
   abstract	= {La révolution contributive résulte du passage rapide à
 		  une conception dominante des systèmes (techniques,
 		  sociaux, organisationnels, culturels, etc.) où chacun des
@@ -22,9 +26,10 @@
 		  sociétés contemporaines, elle concerne tout le champ
 		  épistémologique, des sciences jusqu’aux organisations
 		  sociales (épistémè).},
-  editor	= {Pierre Giorgini},
   booktitle	= {La révolution contributive},
   collection	= {Innovation et technologies},
-  url		= {https://www.istegroup.com/fr/produit/la-revolution-contributive/},
-  isbn		= {9781784058135}
+  language	= {fr},
+  pagetotal	= {1250},
+  ppn_gvk	= {1778174922},
+  url		= {https://www.istegroup.com/fr/produit/la-revolution-contributive/}
 }
