--- a/src/assets/bib/2023-DMM-Castes-Politics.bib
+++ b/src/assets/bib/2023-DMM-Castes-Politics.bib
@@ -1,18 +1,25 @@
 
 @Book{		  2023-dmm-castes-politics,
-  publisher	= { C Hurst & Co Publishers Ltd},
-  language	= {en},
+  author	= {Divya Dwivedi and Shaj Mohan and Maël Montévil},
+  editor	= {Shaj Mohan},
+  publisher	= {Hurst Publishers},
+  title		= {Indian Philosophy, Indian Revolution},
   year		= {2024},
+  address	= {La Vergne},
   day		= {8},
-  month		= 2,
-  abstract	= { In their brave and challenging book, grounded in
-		  political science and the Continental philosophical
-		  tradition, Divya Dwivedi and Shaj Mohan engage with the
-		  resurgence of upper-caste supremacism in India and its
-		  justification via the legacy of ‘the Aryan doctrine’
-		  and Hindu nationalism. Their essays were written from 2016
-		  to 2023, when India’s democratic institutions were
-		  subverted and caste-based oppression overflowed into public
+  edition	= {1st ed.},
+  isbn		= {9781805261742},
+  month		= {2},
+  note		= {Description based on publisher supplied metadata and other
+		  sources.},
+  abstract	= {In their brave and challenging book, grounded in political
+		  science and the Continental philosophical tradition, Divya
+		  Dwivedi and Shaj Mohan engage with the resurgence of
+		  upper-caste supremacism in India and its justification via
+		  the legacy of ‘the Aryan doctrine’ and Hindu
+		  nationalism. Their essays were written from 2016 to 2023,
+		  when India’s democratic institutions were subverted and
+		  caste-based oppression overflowed into public
 		  space―killing and menacing the lower castes of all
 		  religions, minorities, women, students and the media. <br>
 		  This book chronicles the ascending oppression of democracy
@@ -31,10 +38,10 @@
 		  based enslavement and indignity? Revolution has only one
 		  sense in India, the annihilation of caste; and
 		  ‘citizen’ has only one sense, the people of the state
-		  shedding caste and racism. },
-  author	= {Divya Dwivedi and Shaj Mohan and Maël Montévil},
-  title		= {Indian Philosophy, Indian Revolution: On Caste and
-		  Politics},
-  url		= {https://www.hurstpublishers.com/book/indian-philosophy-indian-revolution/},
-  isbn		= {978-191172323}
+		  shedding caste and racism.},
+  language	= {en},
+  pagetotal	= {1256},
+  ppn_gvk	= {1887661654},
+  subtitle	= {On Caste and Politics},
+  url		= {https://www.hurstpublishers.com/book/indian-philosophy-indian-revolution/}
 }
