--- a/src/assets/bib/2023-MS-organisation-modeling-principles.bib
+++ b/src/assets/bib/2023-MS-organisation-modeling-principles.bib
@@ -1,12 +1,17 @@
 
 @InBook{	  2023-ms-organisation-modeling-principles,
-  author	= {Ma{\"e}l Mont{\'e}vil and Ana Soto},
-  publisher	= {Springer Nature},
-  title		= {Modeling organogenesis from biological first principles},
-  language	= {en},
+  author	= {Montévil, Maël and Soto, Ana M.},
+  editor	= {Matteo Mossio},
+  pages		= {263--283},
+  publisher	= {Springer International Publishing},
+  title		= {Modeling Organogenesis from Biological First Principles},
   year		= {2023},
-  month		= {12},
+  address	= {Cham},
   day		= {17},
+  isbn		= {9783031389689},
+  month		= nov,
+  number	= {33},
+  series	= {History, Philosophy and Theory of the Life Sciences},
   abstract	= {Unlike inert objects, organisms and their cells have the
 		  ability to initiate activity by themselves, and thus change
 		  their properties or states even in the absence of an
@@ -47,10 +52,12 @@
 		  examined in silico and rigorously tested by in vitro and in
 		  vivo experiments, in accordance with the organicist
 		  perspective we embrace.},
-  editor	= {Matteo Mossio},
-  booktitle	= {Organization in Biology: Foundational Enquiries into a
-		  Scientific Blindspot},
+  booktitle	= {Organization in Biology},
   collection	= {History, Philosophy and Theory of the Life Sciences},
-  url		= {https://link.springer.com/book/9783031389672},
-  isbn		= {9783031389672}
+  doi		= {10.1007/978-3-031-38968-9_12},
+  issn		= {2211-1956},
+  language	= {en},
+  pagetotal	= {1333},
+  ppn_gvk	= {1904868525},
+  url		= {https://link.springer.com/book/9783031389672}
 }
