--- a/src/assets/bib/2023-Montevil-Mathematical-Modeling-organisms.bib
+++ b/src/assets/bib/2023-Montevil-Mathematical-Modeling-organisms.bib
@@ -1,29 +1,32 @@
 
 @InBook{	  2023-montevil-mathematical-modeling-organisms,
-  author	= {Montévil, Maël},
+  author	= {Mont{\'e}vil, Ma{\"e}l},
   editor	= {Bizzarri, Mariano},
-  title		= {Mathematical modeling in the study of organisms and their
-		  parts},
+  pages		= {105--119},
+  publisher	= {Springer US},
+  title		= {Mathematical Modeling in the Study of Organisms and Their
+		  Parts},
   year		= {2024},
-  month		= {01},
-  day		= {26},
+  address	= {New York, NY},
+  edition	= {2nd ed. 2024.},
+  isbn		= {9781071635773},
+  number	= {2745},
   series	= {Methods in Molecular Biology},
   abstract	= {Mathematical modeling is a very powerful tool to
 		  understand natural phenomena. Such a tool carries its own
 		  assumptions and should always be used critically. In this
 		  chapter we highlight the key ingredients and steps of
-		  modeling and focus on their biological interpretation. In
-		  particular, we discuss the role of theoretical principles
+		  modeling and focus on their biological interpretation.
+		  Particularly, we discuss the role of theoretical principles
 		  in writing models. We also highlight the meaning and
 		  interpretation of equations. The main aim of this chapter
 		  is to facilitate the interaction between biologists and
 		  mathematical modelers. We focus on the case of cell
 		  proliferation and motility in the context of multicellular
 		  organisms.},
-  booktitle	= {Systems Biology 2nd edition},
-  keywords	= {Equations, Mathematical modeling, Parameters,
-		  Proliferation, Theory},
-  language	= {en},
-  url		= {https://link.springer.com/book/9781071635766},
-  isbn		= {9781071635766}
+  booktitle	= {Systems Biology},
+  doi		= {10.1007/978-1-0716-3577-3_7},
+  pagetotal	= {12565343},
+  ppn_gvk	= {1873165609},
+  url		= {https://doi.org/10.1007/978-1-0716-3577-3_7}
 }
