--- a/src/assets/bib/2023-Montevil-Stiegler-memory-future.bib
+++ b/src/assets/bib/2023-Montevil-Stiegler-memory-future.bib
@@ -1,13 +1,15 @@
 
 @InBook{	  2023-montevil-stiegler-memory-future,
   author	= {Ma{\"e}l Mont{\'e}vil},
-  title		= {Plaine Commune, contributive learning territory},
-  language	= {en},
-  year		= {2024},
-  month		= {01},
-  day		= {25},
-  booktitle	= {Memories for the Future: Thinking with Bernard Stiegler},
   editor	= {Bart Buseyne and Georgios Tsagdis and Paul Willemarck},
+  publisher	= {Bloomsbury Academic},
+  title		= {Plaine Commune, contributive learning territory},
+  year		= {2024},
+  address	= {London},
+  day		= {25},
+  isbn		= {1350410446},
+  month		= {01},
+  note		= {Includes bibliographical references and index},
   abstract	= {The program Plaine Commune, contributive learning
 		  territory, started in late 2016. It emerged from the
 		  theoretical work of Bernard Stiegler and the Ars
@@ -21,8 +23,11 @@
 		  the group on digital media and young children’s
 		  development and how academics and inhabitant works
 		  integrate.},
-  url		= {https://www.bloomsbury.com/uk/bernard-stiegler-9781350410459/},
-  publisher	= {Bloomsbury},
-  isbn		= {9781350410442},
-  page		= {167-174}
+  booktitle	= {Memories for the Future: Thinking with Bernard Stiegler},
+  language	= {en},
+  page		= {167-174},
+  pagetotal	= {249},
+  ppn_gvk	= {1885370008},
+  subtitle	= {Memories of the future},
+  url		= {https://www.bloomsbury.com/uk/bernard-stiegler-9781350410459/}
 }
