--- a/src/assets/bib/2024-Montevil-Normal-Pathologique-80ans.bib
+++ b/src/assets/bib/2024-Montevil-Normal-Pathologique-80ans.bib
@@ -3,11 +3,15 @@
   author	= {Montévil, Maël},
   editor	= {Pierre-Frédéric Daled and Mathias Girel and Nathalie
 		  Queyroux},
+  publisher	= {Rued'Ulm},
   title		= {Normativité et disruption du vivant dans
 		  l’Anthropocène},
   year		= {2024},
-  month		= {05},
+  address	= {Paris},
   day		= {17},
+  isbn		= {9782728808663},
+  month		= {05},
+  series	= {Les @rencontres de Normale Sup'},
   abstract	= {Quatre-vingts ans après, Le Normal et le Pathologique est
 		  une référence majeure en philosophie mais qu’en est-il
 		  en biologie et en médecine ? Plus précisément, quelle
@@ -17,7 +21,7 @@
   booktitle	= {Georges Canguilhem, 80 ans après Le Normal et le
 		  Pathologique},
   language	= {fr},
-  url		= {https://presses.ens.psl.eu/georges-canguilhem.html},
-  series	= {Les rencontres de Normale Sup’ },
-  isbn		= {9782728808663}
+  pagetotal	= {215},
+  ppn_gvk	= {1890558311},
+  url		= {https://presses.ens.psl.eu/georges-canguilhem.html}
 }
