--- a/src/assets/bib/2012-LM-Inert-Vs-Living.bib
+++ b/src/assets/bib/2012-LM-Inert-Vs-Living.bib
@@ -3,11 +3,12 @@
   author	= {G. Longo and Montévil, Maël},
   journal	= {Frontiers in Physiology},
   title		= {The Inert vs. the Living State of Matter: Extended
-		  Criticality, Time Geometry, Anti-Entropy --- an overview},
+		  Criticality, Time Geometry, Anti-Entropy – An Overview},
   year		= {2012},
   day		= {27},
   issn		= {1664-042X},
   month		= {feb},
+  note		= {\url{https://montevil.org/publications/articles/2012-LM-Inert-Vs-Living/}},
   number	= {00039},
   volume	= {3},
   abstract	= {The physical singularity of life phenomena is analyzed by
@@ -24,7 +25,6 @@
 		  throughout.},
   doi		= {10.3389/fphys.2012.00039},
   eprint	= {https://montevil.org/assets/pdf/2012-LM-Inert-Vs-Living.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2012-LM-Inert-Vs-Living/}},
   keywords	= {criticality, biological time, anti-entropy, theoretical
 		  biology, symmetry, allometry, incompleteness},
   language	= {english},
