--- a/src/assets/bib/2012-LM-Randomness-Order-Evolution.bib
+++ b/src/assets/bib/2012-LM-Randomness-Order-Evolution.bib
@@ -4,14 +4,16 @@
   editor	= {Dinneen, Michael J. and Khoussainov, Bakhadyr and Nies,
 		  André},
   pages		= {289--308},
-  publisher	= {Springer Berlin Heidelberg},
+  publisher	= {Springer Berlin / Heidelberg},
   title		= {Randomness Increases Order in Biological Evolution},
   year		= {2012},
   address	= {Berlin, Heidelberg},
   day		= {18},
-  isbn		= {978-3-642-27654-5},
+  isbn		= {9783642276545},
   month		= jan,
-  series	= {Lecture Notes in Computer Science},
+  note		= {\url{https://montevil.org/publications/chapters/2012-LM-Randomness-Order-Evolution/}},
+  number	= {v.7160},
+  series	= {Lecture Notes in Computer Science Ser.},
   volume	= {7160},
   abstract	= {In this text, we revisit part of the analysis of
 		  anti-entropy in [4] and develop further theoretical
@@ -30,9 +32,14 @@
   booktitle	= {Computation, Physics and Beyond},
   doi		= {10.1007/978-3-642-27654-5_22},
   eprint	= {https://montevil.org/assets/pdf/2012-LM-Randomness-Order-Evolution.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2012-LM-Randomness-Order-Evolution/}},
   keywords	= {Entropy Production, Biological Evolution, Irreversible
 		  Process, Combinatorial Complexity, Biological
 		  Organization},
-  language	= {english}
+  language	= {english},
+  pagetotal	= {1435},
+  ppn_gvk	= {1746293683},
+  subtitle	= {International Workshop on Theoretical Computer Science,
+		  WTCS 2012, Dedicated to Cristian S. Calude on the Occasion
+		  of His 60th Birthday, Auckland, New Zealand, February
+		  21-24, 2012, Revised Selected and Invited Papers}
 }
