--- a/src/assets/bib/2015-Montevil-Symetrie-Objectivation-Vivant.bib
+++ b/src/assets/bib/2015-Montevil-Symetrie-Objectivation-Vivant.bib
@@ -8,8 +8,9 @@
   year		= {2015},
   address	= {Paris},
   day		= {1},
-  isbn		= {978-2-919694-93-8},
+  isbn		= {9782919694938},
   month		= aug,
+  note		= {\url{https://montevil.org/publications/chapters/2015-Montevil-Symetrie-Objectivation-Vivant/}},
   abstract	= {Ce texte présente un modèle pour le temps biologique
 		  ainsi qu'un certain nombre d'idées plus générales sur
 		  l'articulation entre mathématiques et objets biologiques,
@@ -40,7 +41,6 @@
 		  symétries fondamentales de la physique.},
   booktitle	= {Le vivant critique et chaotique},
   eprint	= {https://montevil.org/assets/pdf/2015-Montevil-Symetrie-Objectivation-Vivant.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2015-Montevil-Symetrie-Objectivation-Vivant/}},
   language	= {french},
   organization	= {Editions Materiologiques},
   url		= {https://materiologiques.com/fr/modelisations-simulations-systemes-complexes-2425-5661/206-le-vivant-critique-et-chaotique-9782919694938.html}
