--- a/src/assets/bib/2016-MML-Theoretical-Principles-Organization.bib
+++ b/src/assets/bib/2016-MML-Theoretical-Principles-Organization.bib
@@ -6,7 +6,8 @@
   year		= {2016},
   day		= {10},
   issn		= {0079-6107},
-  month		= {aug},
+  month		= oct,
+  note		= {\url{https://montevil.org/publications/articles/2016-MML-Theoretical-Principles-Organization/}},
   number	= {1},
   pages		= {24--35},
   volume	= {122},
@@ -25,7 +26,6 @@
 		  variation.},
   doi		= {10.1016/j.pbiomolbio.2016.07.005},
   eprint	= {https://montevil.org/assets/pdf/2016-MML-Theoretical-Principles-Organization.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2016-MML-Theoretical-Principles-Organization/}},
   keywords	= {Theoretical principle, Organization, Constraints, Closure,
 		  Stability, Organicism},
   language	= {english},
