--- a/src/assets/bib/2017-LM-Comparing-Symmetries-Models.bib
+++ b/src/assets/bib/2017-LM-Comparing-Symmetries-Models.bib
@@ -3,12 +3,13 @@
   author	= {G. Longo and Montévil, Maël},
   editor	= {M. Dorato and L. Magnani and T. Bertolotti},
   pages		= {843--856},
-  publisher	= {Springer},
+  publisher	= {Springer International Publishing},
   title		= {Comparing Symmetries in Models and Simulations},
   year		= {2018},
   day		= {23},
-  isbn		= {9783319808307},
+  isbn		= {9783319305264},
   month		= may,
+  note		= {\url{https://montevil.org/publications/chapters/2017-LM-Comparing-Symmetries-Models/}},
   abstract	= {Computer simulations brought remarkable novelties to
 		  knowledge construction. In this chapter, we first
 		  distinguish between mathematical modeling, computer
@@ -26,7 +27,8 @@
   booktitle	= {Springer Handbook of Model-Based Science},
   doi		= {10.1007/978-3-319-30526-4},
   eprint	= {https://montevil.org/assets/pdf/2017-LM-Comparing-Symmetries-Models.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2017-LM-Comparing-Symmetries-Models/}},
+  issn		= {2522-8706},
+  journal	= {Springer Handbooks},
   keywords	= {Phase Space, Symmetry Breaking, Chaotic Dynamic, Object
 		  Oriented Programming, Genetically Modify Organism},
   language	= {english},
