--- a/src/assets/bib/2019-LM-Extending-Criticality-Extended.bib
+++ b/src/assets/bib/2019-LM-Extending-Criticality-Extended.bib
@@ -7,7 +7,8 @@
   year		= {2020},
   day		= {07},
   issn		= {2225-9627},
-  month		= {jul},
+  month		= jul,
+  note		= {\url{https://montevil.org/publications/articles/2019-LM-Extending-Criticality-Extended/}},
   number	= {1},
   pages		= {77--92},
   volume	= {9},
@@ -33,7 +34,6 @@
   chapter	= {77},
   doi		= {10.14428/aes.v9i1.56043},
   eprint	= {https://montevil.org/assets/pdf/2019-LM-Extending-Criticality-Extended.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2019-LM-Extending-Criticality-Extended/}},
   keywords	= {Coherent structures, Critical transitions, downward
 		  causation, Hidden variables, Levels of organization,
 		  Symmetries, Systems biology},
