--- a/src/assets/bib/2020-MM-Identity-Organism.bib
+++ b/src/assets/bib/2020-MM-Identity-Organism.bib
@@ -7,7 +7,8 @@
   year		= {2020},
   day		= {17},
   issn		= {1664-042X},
-  month		= {jun},
+  month		= jun,
+  note		= {\url{https://montevil.org/publications/articles/2020-MM-Identity-Organism/}},
   pages		= {611},
   volume	= {11},
   abstract	= {We address the identity of biological organisms at play in
@@ -40,7 +41,6 @@
 		  experiments.},
   doi		= {10.3389/fphys.2020.00611},
   eprint	= {https://montevil.org/assets/pdf/2020-MM-Identity-Organism.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2020-MM-Identity-Organism/}},
   language	= {english},
   publisher	= {Frontiers Media {SA}}
 }
