--- a/src/assets/bib/2023-Montevil-Stiegler.bib
+++ b/src/assets/bib/2023-Montevil-Stiegler.bib
@@ -1,13 +1,17 @@
 
 @InBook{	  2023-montevil-stiegler,
   author	= {Ma{\"e}l Mont{\'e}vil},
+  editor	= {Shaj Mohan and Jean-Luc Nancy},
+  publisher	= {Bloomsbury Publishing Plc},
   title		= {Bernard Stiegler: Friendship and Fellowship},
-  language	= {en},
   year		= {2024},
-  month		= {02},
+  address	= {London},
   day		= {08},
-  booktitle	= {On Bernard Stiegler - Philosopher of Friendship},
-  editor	= {Jean-Luc Nancy},
+  edition	= {1st ed.},
+  isbn		= {9781350329041},
+  month		= {02},
+  note		= {Description based on publisher supplied metadata and other
+		  sources.},
   abstract	= {"What I love, and those whom I love, you, that is to say
 		  us in so far as we are capable of forming a we, all this I
 		  love, and I love them, and I love you infinitely" (Bernard
@@ -26,20 +30,25 @@
 		  and philosophy. Each piece gives a sense of the wide range
 		  of Stiegler's work and how it affected the praxis of the
 		  philosopher in different parts of the world.},
-  url		= {https://www.bloomsbury.com/uk/on-bernard-stiegler-9781350329034/},
-  publisher	= {Bloomsbury},
-  isbn		= {9781350329034}
+  booktitle	= {On Bernard Stiegler - Philosopher of Friendship},
+  language	= {en},
+  pagetotal	= {1169},
+  ppn_gvk	= {1880540932},
+  subtitle	= {Philosopher of Friendship},
+  url		= {https://www.bloomsbury.com/uk/on-bernard-stiegler-9781350329034/}
 }
 
 @InBook{	  2023-montevil-stiegler-memory-future,
   author	= {Ma{\"e}l Mont{\'e}vil},
-  title		= {Plaine Commune, contributive learning territory},
-  language	= {en},
-  year		= {2024},
-  month		= {01},
-  day		= {25},
-  booktitle	= {Memories for the Future: Thinking with Bernard Stiegler},
   editor	= {Bart Buseyne and Georgios Tsagdis and Paul Willemarck},
+  publisher	= {Bloomsbury Academic},
+  title		= {Plaine Commune, contributive learning territory},
+  year		= {2024},
+  address	= {London},
+  day		= {25},
+  isbn		= {1350410446},
+  month		= {01},
+  note		= {Includes bibliographical references and index},
   abstract	= {The program Plaine Commune, contributive learning
 		  territory, started in late 2016. It emerged from the
 		  theoretical work of Bernard Stiegler and the Ars
@@ -53,8 +62,11 @@
 		  the group on digital media and young children’s
 		  development and how academics and inhabitant works
 		  integrate.},
-  url		= {https://www.bloomsbury.com/uk/bernard-stiegler-9781350410459/},
-  publisher	= {Bloomsbury},
-  isbn		= {9781350410442},
-  page		= {167-174}
+  booktitle	= {Memories for the Future: Thinking with Bernard Stiegler},
+  language	= {en},
+  page		= {167-174},
+  pagetotal	= {249},
+  ppn_gvk	= {1885370008},
+  subtitle	= {Memories of the future},
+  url		= {https://www.bloomsbury.com/uk/bernard-stiegler-9781350410459/}
 }
